--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yiisoft/_____",
+    "name": "yiisoft/yii-roadrunner-centrifugo",
     "type": "library",
     "description": "_____",
     "keywords": [
@@ -28,7 +28,16 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^8.1"
+        "php": "^8.1",
+        "psr/container": "^2.0",
+        "yiisoft/config": "^1.1",
+        "yiisoft/definitions": "^1.0|^2.0|^3.0",
+        "yiisoft/di": "^1.0",
+        "yiisoft/error-handler": "^3.0",
+        "yiisoft/log": "^2.0",
+        "yiisoft/log-target-file": "^3.0",
+        "yiisoft/yii-runner": "^2.0",
+        "roadrunner-php/centrifugo": "^2.2"
     },
     "require-dev": {
         "maglnet/composer-require-checker": "^4.7",
@@ -36,23 +45,35 @@
         "rector/rector": "^1.2",
         "roave/infection-static-analysis-plugin": "^1.34",
         "spatie/phpunit-watcher": "^1.23",
-        "vimeo/psalm": "^5.20"
+        "vimeo/psalm": "^5.20",
+        "yiisoft/test-support": "^3.0"
     },
     "autoload": {
         "psr-4": {
-            "Yiisoft\\_____\\": "src"
+            "Yiisoft\\Runner\\RoadRunner\\Centrifugo\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Yiisoft\\_____\\Tests\\": "tests"
+            "Yiisoft\\Runner\\RoadRunner\\Centrifugo\\Tests\\": "tests"
+        }
+    },
+    "extra": {
+        "config-plugin-options": {
+            "source-directory": "config",
+            "build-merge-plan": false
+        },
+        "config-plugin": {
+            "di": "di-*.php",
+            "params": "params.php"
         }
     },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
             "infection/extension-installer": true,
-            "composer/package-versions-deprecated": true
+            "composer/package-versions-deprecated": true,
+            "yiisoft/config": true
         }
     },
     "scripts": {
