--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,15 @@
 {
-    "name": "yiisoft/yii-roadrunner-centrifugo",
+    "name": "uzdevid/yii-centrifugo",
     "type": "library",
-    "description": "_____",
+    "description": "Centrifugo & RoadRunner based Yii runner",
     "keywords": [
-        "_____"
+        "php",
+        "yii3",
+        "centrifugo",
+        "roadrunner-centrifugo"
     ],
-    "homepage": "https://www.yiiframework.com/",
-    "license": "BSD-3-Clause",
-    "support": {
-        "issues": "https://github.com/yiisoft/_____/issues?state=open",
-        "source": "https://github.com/yiisoft/_____",
-        "forum": "https://www.yiiframework.com/forum/",
-        "wiki": "https://www.yiiframework.com/wiki/",
-        "irc": "ircs://irc.libera.chat:6697/yii",
-        "chat": "https://t.me/yii3en"
-    },
-    "funding": [
-        {
-            "type": "opencollective",
-            "url": "https://opencollective.com/yiisoft"
-        },
-        {
-            "type": "github",
-            "url": "https://github.com/sponsors/yiisoft"
-        }
-    ],
+    "homepage": "https://uzdevid.com/",
+    "license": "MIT",
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
@@ -50,12 +35,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Yiisoft\\Runner\\RoadRunner\\Centrifugo\\": "src"
+            "UzDevid\\Yii\\Runner\\Centrifugo\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Yiisoft\\Runner\\RoadRunner\\Centrifugo\\Tests\\": "tests"
+            "UzDevid\\Yii\\Runner\\Centrifugo\\Tests\\": "tests"
         }
     },
     "extra": {
