--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,3 +32,5 @@ jobs:
         ['ubuntu-latest', 'windows-latest']
       php: >-
         ['8.1', '8.2', '8.3']
+      extensions: >-
+        sockets
