--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,14 @@
     "require": {
         "php": "^8.1",
         "psr/container": "^2.0",
-        "yiisoft/config": "^1.1",
+        "roadrunner-php/centrifugo": "^2.2",
+        "spiral/roadrunner": "^2024.1",
         "yiisoft/definitions": "^1.0|^2.0|^3.0",
         "yiisoft/di": "^1.0",
         "yiisoft/error-handler": "^3.0",
         "yiisoft/log": "^2.0",
         "yiisoft/log-target-file": "^3.0",
-        "yiisoft/yii-runner": "^2.0",
-        "roadrunner-php/centrifugo": "^2.2"
+        "yiisoft/yii-runner": "^2.0"
     },
     "require-dev": {
         "maglnet/composer-require-checker": "^4.7",
@@ -31,6 +31,7 @@
         "roave/infection-static-analysis-plugin": "^1.34",
         "spatie/phpunit-watcher": "^1.23",
         "vimeo/psalm": "^5.20",
+        "yiisoft/config": "^1.1",
         "yiisoft/test-support": "^3.0"
     },
     "autoload": {
@@ -43,26 +44,14 @@
             "UzDevid\\Yii\\Runner\\Centrifugo\\Tests\\": "tests"
         }
     },
-    "extra": {
-        "config-plugin-options": {
-            "source-directory": "config",
-            "build-merge-plan": false
-        },
-        "config-plugin": {
-            "di": "di-*.php",
-            "params": "params.php"
-        }
-    },
-    "config": {
-        "sort-packages": true,
-        "allow-plugins": {
-            "infection/extension-installer": true,
-            "composer/package-versions-deprecated": true,
-            "yiisoft/config": true
-        }
-    },
     "scripts": {
         "test": "phpunit --testdox --no-interaction",
         "test-watch": "phpunit-watcher watch"
+    },
+    "config": {
+        "allow-plugins": {
+            "infection/extension-installer": true,
+            "yiisoft/config": false
+        }
     }
 }
